fix dark mode link style

--- a/src/css/global-sidebar.css
+++ b/src/css/global-sidebar.css
@@ -3,7 +3,7 @@
 }
 
 .menu__link--active:not(.menu__link--sublist) {
-	/* background: var(--ifm-color-white); */
+	background: none;
 	outline: 1px solid #ddd;
 	box-shadow: 0 2px 3px -1px rgba(0, 0, 0, 0.1);
 }
